FIXED cards img, nuked a-z filter, fixed instafeed z-index

--- a/components/IGFeed/ig-feed.module.css
+++ b/components/IGFeed/ig-feed.module.css
@@ -9,6 +9,7 @@
     justify-content: center;
     margin: 0 0 0 0;
     gap: 1em;
+    z-index: 0;
 }
 
 .container img{
