--- a/styles/Graduates.module.css
+++ b/styles/Graduates.module.css
@@ -49,6 +49,7 @@
     margin-inline: auto;
     max-width: 1500px;
     width: 100%;
+    height: 5em;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -62,6 +63,7 @@
 .filters{
     display: flex;
     flex-wrap: wrap;
+    gap: 15px;
 }
 
 .layoutBar {
